--- a/src/main/webapp/admin/location.xhtml
+++ b/src/main/webapp/admin/location.xhtml
@@ -1,83 +1,214 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:p="http://primefaces.org/ui"
-                xmlns:f="http://java.sun.com/jsf/core">
-    <h:outputScript library="primefaces" name="jquery/jquery.js" target="head" />
-    <h:outputScript library="js" name="locationMap.js" target="head"/>
-    <h:panelGroup id="mapCenter">
-        <h:outputScript>
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui" xmlns:f="http://java.sun.com/jsf/core">
+	<h:outputScript library="primefaces" name="jquery/jquery.js" target="head" />
+	<h:outputScript library="js" name="locationMap.js" target="head" />
+	<h:panelGroup id="mapCenter">
+		<h:outputScript>
             setMapCenter(#{locationBean.setMapCenter()});
         </h:outputScript>
-    </h:panelGroup>
-    <h:body>
-        <h:form id="formLocation">
-            <p:panel id="data">
-                <f:facet name="header">
-                    <h:outputText value="Ubicaciones" />
-                </f:facet>
-                <p:tree id="locTree" value="#{locationBean.root}" var="loc" orientation="vertical" selectionMode="single" selection="#{locationBean.selectedNode}">
-                    <p:ajax event="select" listener="#{locationBean.onNodeSelect}" update="mapCenter"/>
-                    <p:treeNode expandedIcon="fa fa-folder-open" collapsedIcon="fa fa-folder" >
-                        <h:outputText value="#{loc}" />
-                    </p:treeNode>
-                </p:tree>
-                <p:contextMenu for="locTree">
-                    <p:menuitem value="Agregar Ubicación" update="locTree :createDialog" actionListener="#{locationBean.setTaxfromNode('create')}" icon="fa fa-plus"/>
-                    <p:menuitem value="Ver detalle de Especies" update="detailDialog" actionListener="#{locationBean.setTaxfromNode('detail')}" icon="fa fa-folder-open" />
-                    <p:menuitem value="Editar" update="locTree :editDialog :displayEdit" actionListener="#{locationBean.setTaxfromNode('edit')}" icon="fa fa-pencil"/>
-                    <p:menuitem value="Borrar" update="locTree" actionListener="#{locationBean.setTaxfromNode('delete')}" icon="fa fa-trash"/>
-                </p:contextMenu>
-            </p:panel>
-            <p:growl id="messages" showDetail="true"/>
-        </h:form>
+	</h:panelGroup>
+	<h:body>
+		<!-- delete Modal -->
+		<h:form id="deleteModalForm">
+			<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="Eliminar registro">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+							</button>
+							<h4 class="modal-title" id="myModalLabel">Confirmar eliminación</h4>
+						</div>
+						<div class="modal-body">¿Está seguro que desea eliminar este registro?</div>
+						<div class="modal-footer">
+							<div class="input-group">
+								<p:commandButton id="deleteYesButton" value="Eliminar" action="#{locationBean.delete}" update=":formLocation"
+									oncomplete="$('#deleteModal').modal('hide')" />
+								<p:commandButton id="deleteNoButton" value="Cancelar" type="button" onclick="$('#deleteModal').modal('hide')" />
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</h:form>
+		<!-- end delete Modal -->
 
-        <p:dialog id="detailDialog" width="500px" appendTo="@(body)" widgetVar="locationDetail" modal="true" dynamic="true" resizable="false" header="#{locationBean.location.locationName}" closeOnEscape="true">
-            <p:dataList id="dataListSpecimen" paginator="true" rows="5" value="#{locationBean.locationSpecimens}" var="specimen" emptyMessage="No se encontraron especímenes asociados a esta ubicación" paginatorPosition="bottom">
-                #{specimen.commonName} <span style="font-style: italic;">(#{specimen.specificEpithet})</span>
-            </p:dataList>
-        </p:dialog>
+		<!-- edit Modal -->
+		<h:form id="editModalForm">
+			<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="Editar Clasificación">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+							</button>
+							<h4 class="modal-title" id="myModalLabel">Editar clasificación</h4>
+						</div>
+						<div class="modal-body">
+							<div class="form-group">
+								<div class="row">
+									<label class="col-md-4 control-label" for="locName">Nombre Clasificación:</label>
+									<div class="col-md-8">
+										<h:inputText id="locName" styleClass="ui-state-default form-control input-sm input-block-level required"
+											value="#{locationBean.location.locationName}" required="true"
+											requiredMessage="Debes definir el nombre de la clasificación!">
+											<p:ajax process="@this" />
+											<f:validateBean disabled="true" />
+										</h:inputText>
+									</div>
+								</div>
+								<div class="row">
+									<label class="col-md-4 control-label" for="level">Nivel Clasificación:</label>
+									<div class="col-md-8">
+										<h:selectOneMenu id="level" styleClass="ui-state-default form-control input-sm input-block-level required"
+											value="#{locationBean.selectedLevel}">
+											<p:ajax process="@this" />
+											<f:validateBean disabled="true" />
+											<f:selectItem itemLabel="Selecciona una jerarquía" itemValue="" />
+											<f:selectItems value="#{locationBean.avalLevels}" var="lev" itemLabel="#{lev.loclevelName}"
+												itemValue="#{lev.idLoclevel}" />
+										</h:selectOneMenu>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="modal-footer">
+							<div class="input-group">
+								<p:commandButton id="editYesButton" value="Guardar" action="#{locationBean.edit()}" update=":formLocation"
+									oncomplete="$('#editModal').modal('hide')" />
+								<p:commandButton id="editNoButton" value="Cancelar" type="button" onclick="$('#editModal').modal('hide')" />
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</h:form>
+		<!-- end edit Modal -->
 
-        <p:dialog id="editDialog" widgetVar="locationEdit" modal="true" resizable="false" appendTo="@(body)" header="Editar a #{locationBean.location.locationName}" closeOnEscape="true" > 
-            <h:form id="locationEditForm" prependId="false">
-                <p:panelGrid id="displayEdit" columns="2">
-                    <p:outputLabel value="Nombre Ubicación:" for="locEName" />
-                    <p:inputText id="locEName" value="#{locationBean.location.locationName}" title="Nombre Ubicación" rendered="true" style="width: 100%" required="true" requiredMessage="Debes definir el nombre de la ubicación!"/>
-                    <p:outputLabel value="Nivel Ubicación:" for="levelE" />
-                    <p:selectOneMenu id="levelE" value="#{locationBean.selectedLevel}" effect="fade" style="width: 100%" required="true" rendered="true" requiredMessage="Debes escoger una jerarquía!">
-                        <f:selectItem itemLabel="Selecciona una jerarquía" itemValue="" />
-                        <f:selectItems value="#{locationBean.allLevels}" var="lev" itemLabel="#{lev.loclevelName}" itemValue="#{lev.idLoclevel}" />
-                    </p:selectOneMenu>
-                </p:panelGrid>
-                <p:commandButton id="editSave" value="Guardar" action="#{locationBean.edit()}" update=":formLocation" oncomplete="PF('locationEdit').hide()"/>
-            </h:form>
-        </p:dialog>
+		<!-- create Modal -->
+		<h:form id="createModalForm">
+			<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="Crear Clasificación">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+							</button>
+							<h4 class="modal-title" id="myModalLabel">Crear clasificación</h4>
+						</div>
+						<div class="modal-body">
+							<div class="form-group">
+								<div class="row">
+									<label class="col-md-4 control-label" for="locName">Clasificación Origen:</label>
+									<h:outputText class="col-md-4"
+										value="#{locationBean.parentLocation.idLoclevel.loclevelName} #{locationBean.parentLocation.locationName}" />
+								</div>
+								<div class="row">
+									<label class="col-md-4 control-label" for="locName">Nombre:</label>
+									<div class="col-md-8">
+										<h:inputText id="locName" styleClass="ui-state-default form-control input-sm input-block-level required"
+											value="#{locationBean.location.locationName}" required="true"
+											requiredMessage="Debes definir el nombre de la clasificación!">
+											<p:ajax process="@this" />
+											<f:validateBean disabled="true" />
+										</h:inputText>
+									</div>
+								</div>
+								<div class="row">
+									<label class="col-md-4 control-label" for="level">Nivel:</label>
+									<div class="col-md-8">
+										<h:selectOneMenu id="level" styleClass="ui-state-default form-control input-sm input-block-level required"
+											value="#{locationBean.selectedLevel}">
+											<p:ajax process="@this" />
+											<f:validateBean disabled="true" />
+											<f:selectItem itemLabel="Selecciona una jerarquía" itemValue="" />
+											<f:selectItems value="#{locationBean.avalLevels}" var="lev" itemLabel="#{lev.loclevelName}"
+												itemValue="#{lev.idLoclevel}" />
+										</h:selectOneMenu>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="modal-footer">
+							<div class="input-group">
+								<p:commandButton id="createYesButton" value="Guardar" action="#{locationBean.persist()}" update=":formLocation"
+									oncomplete="$('#createModal').modal('hide')" />
+								<p:commandButton id="createNoButton" value="Cancelar" type="button" onclick="$('#createModal').modal('hide')" />
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</h:form>
+		<!-- end create Modal -->
 
-        <p:dialog id="createDialog" widgetVar="locationCreate" modal="true" resizable="false" appendTo="@(body)" header="Nueva Ubicación" closeOnEscape="true" > 
-            <h:form id="locationCreateForm" prependId="false">
-                <p:panelGrid id="displayCreate" columns="2">
-                    <p:outputLabel value="Nombre Ubicación:" for="locName" />
-                    <p:inputText id="locName" value="#{locationBean.location.locationName}" title="Nombre Ubicación" rendered="true" style="width: 100%" required="true" requiredMessage="Debes definir el nombre de la ubicación!"/>
-                    <p:outputLabel value="Longitud:" for="lon" />
-                    <p:inputText id="lon" value="#{locationBean.location.longitude}" title="Longitud Decimal" rendered="true" style="width: 100%"/>
-                    <p:outputLabel value="Latitud:" for="lat" />
-                    <p:inputText id="lat" value="#{locationBean.location.latitude}" title="Latitud Decimal" rendered="true" style="width: 100%"/>
-                    <p:outputLabel value="Altitud:" for="alt" />
-                    <p:inputText id="alt" value="#{locationBean.location.altitude}" title="Altitud" rendered="true" style="width: 100%"/>
-                    <p:outputLabel value="Jerarquía" for="level" />
-                    <p:selectOneMenu id="level" value="#{locationBean.selectedLevel}" effect="fade" style="width: 100%" required="true" rendered="true" requiredMessage="Debes escoger una jerarquía!">
-                        <f:selectItem itemLabel="Selecciona una jerarquía" itemValue="" />
-                        <f:selectItems value="#{locationBean.allLevels}" var="lev" itemLabel="#{lev.loclevelName}" itemValue="#{lev.idLoclevel}" />
-                    </p:selectOneMenu>
-                </p:panelGrid>
-                <p:commandButton id="createSave" value="Guardar" action="#{locationBean.persist()}" update=":formLocation" oncomplete="PF('locationCreate').hide()"/>
-            </h:form>
-        </p:dialog>
-        <p:confirmDialog id="deleteDialog" appendTo="@(body)" widgetVar="locationDelete" message="¿Está seguro que desea eliminar este registro?" showEffect="fade" hideEffect="fade" header="Confirmar eliminación" severity="alarm">
-            <h:form id="deleteForm" style=""> 
-                <p:commandButton id="deleteYesButton" value="Eliminar" action="#{locationBean.delete}" update=":formLocation" oncomplete="PF('locationDelete').hide()" />
-                <p:commandButton id="deleteNoButton" value="Cancelar" onclick="PF('locationDelete').hide()" type="button" />
-            </h:form>
-        </p:confirmDialog>
-    </h:body>
+		<!-- detail Modal -->
+		<h:form id="detailModalForm">
+			<div class="modal fade" id="detailModal" tabindex="-1" role="dialog" aria-labelledby="Detalle de Especímenes">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+							</button>
+							<h4 class="modal-title" id="myModalLabel">Detalle de Especímenes</h4>
+						</div>
+						<div class="modal-body">
+							<div class="form-group">
+								<ui:repeat var="specimen" value="#{locationBean.locationSpecimens}">
+									<div class="row">
+										<h:outputText class="col-md-10"
+											value="#{specimen.idTaxonomy.taxonomyName} #{specimen.specificEpithet} (#{specimen.commonName})" />
+										<p:commandLink id="viewButton" class="btn btn-default btn-sm btn-action"
+											oncomplete="PF('specimenDetail').show()" title="Ficha técnica de #{specimen.commonName}"
+											actionListener="#{specimenBean.setSpecimen(specimen)}">
+											<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+										</p:commandLink>
+									</div>
+									<hr />
+								</ui:repeat>
+							</div>
+						</div>
+						<div class="modal-footer">
+							<div class="input-group">
+								<p:commandButton id="detailNoButton" value="Cerrar" type="button" onclick="$('#detailModal').modal('hide')" />
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</h:form>
+		<!-- end detail Modal -->
+
+		<h:form id="formLocation">
+			<p:panel id="data">
+				<f:facet name="header">
+					<h:outputText value="Ubicaciones" />
+				</f:facet>
+				<p:tree id="locTree" value="#{locationBean.locRoot}" var="loc" orientation="vertical" selectionMode="single"
+					selection="#{locationBean.selectedNode}">
+					<p:ajax event="select" listener="#{locationBean.onNodeSelect}" update="mapCenter" />
+					<p:treeNode expandedIcon="fa fa-folder-open" collapsedIcon="fa fa-folder">
+						<h:outputText value="#{loc}" />
+					</p:treeNode>
+				</p:tree>
+				<p:contextMenu for="locTree">
+					<p:menuitem value="Agregar Clasificación" update="createModalForm"
+						actionListener="#{locationBean.setDatafromNode('create')}" icon="fa fa-plus"
+						oncomplete="$('#createModal').modal({backdrop: false})" />
+
+					<p:menuitem value="Editar" update="editModalForm" actionListener="#{locationBean.setDatafromNode('edit')}"
+						icon="fa fa-pencil" oncomplete="$('#editModal').modal({backdrop: false})" />
+
+					<p:menuitem value="Ver detalle de Especies" update="detailModalForm"
+						actionListener="#{locationBean.setDatafromNode('detail')}" icon="fa fa-folder-open"
+						oncomplete="$('#detailModal').modal({backdrop: false})" />
+
+					<p:menuitem value="Borrar" update="locTree" actionListener="#{locationBean.setDatafromNode('delete')}"
+						icon="fa fa-trash" oncomplete="$('#deleteModal').modal({backdrop: false})" />
+				</p:contextMenu>
+			</p:panel>
+			<p:growl id="messages" showDetail="true" />
+		</h:form>
+	</h:body>
 </ui:composition>
