--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -20,6 +20,7 @@
         <link href="../css/jquery.steps.css" rel="stylesheet" />
     </h:head>
     <h:outputScript library="primefaces" name="jquery/jquery.js" target="head" />
+    <h:outputScript library="js" name="locationMap.js" target="head" />
     <h:body>
         <div id="loading" class="oculto topcorner">
             <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
